# src/internal/domain/entities/room.go
@@ -8,12 +8,13 @@ import (
 )
 
 type Room struct {
-	ID        uuid.UUID      `gorm:"type:uuid;primaryKey" json:"id"`
-	Name      string         `gorm:"not null" json:"name"`
-	Type      string         `gorm:"default:'PRIVATE'" json:"type"` // PRIVATE, GROUP
-	CreatedAt time.Time      `json:"created_at"`
-	UpdatedAt time.Time      `json:"updated_at"`
-	DeletedAt gorm.DeletedAt `gorm:"index" json:"-"`
+	ID          uuid.UUID      `gorm:"type:uuid;primaryKey" json:"id"`
+	Name        string         `gorm:"not null" json:"name"`
+	Type        string         `gorm:"default:'PRIVATE'" json:"type"` // PRIVATE, GROUP
+	LastMessage string         `gorm:"->;column:last_message" json:"last_message"`
+	CreatedAt   time.Time      `json:"created_at"`
+	UpdatedAt   time.Time      `json:"updated_at"`
+	DeletedAt   gorm.DeletedAt `gorm:"index" json:"-"`
 
 	Participants []User `gorm:"many2many:room_participants;" json:"participants"`
 }
